--- a/build.xml
+++ b/build.xml
@@ -79,7 +79,9 @@
     <target name="shaded-jar" depends="jar" description="Create shaded jar">
         <mkdir dir="dist/native"/>
         <mkdir dir="dist/native/darwin"/>
+        <mkdir dir="dist/native/linux-x86-64"/>
         <copy file="libwebview.dylib" todir="dist/native/darwin"/>
+        <copy file="libwebview.so" todir="dist/native/linux-x86-64"/>
         <jar destfile="dist/${application.title}-shaded.jar">
             <manifest>
             <attribute name="Main-Class"
