Removed jna reference in properties

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,9 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/WebView
 endorsed.classpath=
 excludes=
-file.reference.jna-5.5.0.jar=lib/jna-5.5.0.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.jna-5.5.0.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
