Added test dependencies.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/WebView
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=lib/hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=lib/junit-4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -51,8 +53,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.12.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
