--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -17,5 +17,7 @@ jobs:
       run: sudo apt-get install xvfb
     - name: Build with Ant
       run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" jar
-    - name: Run Unit Tests
-      run: xvfb-run --auto-servernum ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" test
+    - name: Start XVFB
+      run: export DISPLAY=:99.0 && sh -e /etc/init.d/xvfb start
+    - name: Run Unit Tests 
+      run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" test
