--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: [push]
 
 jobs:
-  build:
+  build-linux:
 
     runs-on: ubuntu-latest
 
@@ -19,3 +19,18 @@ jobs:
       run: sudo apt-get update && sudo apt-get install libwebkit2gtk-4.0-dev xvfb -y
     - name: Run Unit Tests 
       run: xvfb-run ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" test
+  
+  build-macos:
+
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Build with Ant
+      run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" jar
+    - name: Run Unit Tests 
+      run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" test
