--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -36,3 +36,18 @@ jobs:
       run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" jar
     - name: Run Unit Tests 
       run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" test
+      
+  build-windows:
+
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Build with Ant
+      run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" jar
+    - name: Run Unit Tests 
+      run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" test
