--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -48,6 +48,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Ant
-      run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" jar
+      run: ant -Dplatforms.JDK_1.8.home="%JAVA_HOME%" jar
     - name: Run Unit Tests 
-      run: ant -Dplatforms.JDK_1.8.home="$JAVA_HOME" test
+      run: ant -Dplatforms.JDK_1.8.home="%JAVA_HOME%" test
