Add JUnit dependency

--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,12 @@
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.7.1</version>
+        </dependency>
+    </dependencies>
+
 </project>
