--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,8 +12,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-            - name: Build with Maven
-              run: mvn -B clean test --file pom.xml
+      - name: Build with Maven
+        run: mvn -B clean test --file pom.xml
   build-macos-test:
     runs-on: macos-latest
     steps:
@@ -24,7 +24,8 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
                           - name: Build with Maven
-                          run: mvn -B clean test --file pom.xml
+      - name: Test macOS Maven
+        run: mvn -B clean test --file pom.xml
   build-linux-test:
     runs-on: ubuntu-latest
     steps:
@@ -34,8 +35,8 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-                          - name: Build with Maven
-                          run: mvn -B clean test --file pom.xml
+      - name: Test linux Maven
+        run: mvn -B clean test --file pom.xml
   build-release:
     runs-on: windows-latest
     steps:
