--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,6 +6,10 @@ jobs:
   build-windows-test:
     runs-on: windows-latest
     steps:
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 1.8
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -17,6 +21,10 @@ jobs:
   build-macos-test:
     runs-on: macos-latest
     steps:
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 1.8
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -28,6 +36,10 @@ jobs:
   build-linux-test:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 1.8
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -39,6 +51,10 @@ jobs:
   build-release:
     runs-on: windows-latest
     steps:
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 1.8
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
