Add distribution info

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,6 +10,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 1.8
+          distribution: 'adopt'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -25,6 +26,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 1.8
+          distribution: 'adopt'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -40,6 +42,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 1.8
+          distribution: 'adopt'
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
