--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,6 +6,7 @@ jobs:
   build-windows-test:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v2
         with:
@@ -22,6 +23,7 @@ jobs:
   build-macos-test:
     runs-on: macos-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v2
         with:
@@ -38,6 +40,7 @@ jobs:
   build-linux-test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v2
         with:
