--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -57,6 +57,7 @@ jobs:
   build-release:
     runs-on: windows-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Set up JDK 1.8
         uses: actions/setup-java@v2
         with:
