--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -70,7 +70,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
-        run: mvn -B clean install --file ${{ github.workspace }}\pom.xml
+        run: mvn -B clean install --file ${{ github.workspace }}/pom.xml
       - name: Update Automatic Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
