Update release to ok tag

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -75,7 +75,7 @@ jobs:
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN}}"
-          automatic_release_tag: "Release Build"
+          automatic_release_tag: "release"
           prerelease: true
           title: "Release Build"
           files: ./target/*.jar
